--- a/.github/workflows/helm-publish.yml
+++ b/.github/workflows/helm-publish.yml
@@ -4,7 +4,7 @@ name: Publish Helm chart
 on:
   workflow_dispatch:
   push:
-    branches: ['**']
+    branches: ["**"]
   # release:
   #   types: [released]
 
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v4
         with:
-          version: 'latest'
+          version: "latest"
 
       - name: Extract version from Cargo.toml
         id: version
@@ -151,20 +151,18 @@ jobs:
           echo "  Lines: $(wc -l < index.yaml)"
           echo "  MD5: $(md5sum index.yaml | awk '{print $1}')"
           echo "========================="
-      - name: Debugging with ssh
-        uses: lhotari/action-upterm@v1
 
-      # - name: Upload chart package to R2
-      #   run: |
-      #     cd examples/production-deployment-k8s-helm
-      #     CHART_FILE=$(ls tensorzero-*.tgz)
-      #     aws s3 cp ${CHART_FILE} s3://tensorzero-helm-charts/${CHART_FILE} \
-      #       --endpoint-url ${{ vars.R2_ENDPOINT_URL }}
-      #     echo "Uploaded ${CHART_FILE} to R2"
+      - name: Upload chart package to R2
+        run: |
+          cd examples/production-deployment-k8s-helm
+          CHART_FILE=$(ls tensorzero-*.tgz)
+          aws s3 cp ${CHART_FILE} s3://tensorzero-helm-charts/${CHART_FILE} \
+            --endpoint-url ${{ vars.R2_ENDPOINT_URL }}
+          echo "Uploaded ${CHART_FILE} to R2"
 
-      # - name: Upload index.yaml to R2
-      #   run: |
-      #     cd examples/production-deployment-k8s-helm
-      #     aws s3 cp index.yaml s3://tensorzero-helm-charts/index.yaml \
-      #       --endpoint-url ${{ vars.R2_ENDPOINT_URL }}
-      #     echo "Uploaded index.yaml to R2"
+      - name: Upload index.yaml to R2
+        run: |
+          cd examples/production-deployment-k8s-helm
+          aws s3 cp index.yaml s3://tensorzero-helm-charts/index.yaml \
+            --endpoint-url ${{ vars.R2_ENDPOINT_URL }}
+          echo "Uploaded index.yaml to R2"
