--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -135,12 +135,6 @@ jobs:
           TENSORZERO_CI: 1
         run: pnpm ui:test:e2e-base-path
 
-      - name: Run UI E2E tests that require credentials
-        id: e2e_tests_credentials
-        env:
-          TENSORZERO_CI: 1
-        run: pnpm ui:test:e2e --grep "@credentials"
-
       - name: Print Docker Compose logs
         if: always()
         working-directory: ui
@@ -168,6 +162,82 @@ jobs:
             ui/playwright-report/
             ui/test-results/
           retention-days: 7
+
+  ui-tests-e2e-credentials:
+    runs-on: namespace-profile-tensorzero-8x16
+    steps:
+      # TODO - investigate why using the Namespace checkout action causes
+      # 'tensorzero_core::built_info::GIT_COMMIT_HASH_SHORT' to be `None`
+      - name: Check out the repo
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
+
+      - name: Setup Node
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
+        with:
+          node-version: "22.9.0"
+
+      - name: Setup `pnpm`
+        uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda
+
+      - name: Install `pnpm` dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Setup Playwright
+        run: pnpm --filter=tensorzero-ui exec playwright install --with-deps chromium
+
+      - name: Cache `s3-fixtures`
+        uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
+        with:
+          path: |
+            ./ui/fixtures/s3-fixtures
+
+      # When we're regenerating the model inference cache, don't download the container images
+      # The images will get built by `regenerate-model-inference-cache.sh`
+      - name: Download container images
+        if: inputs.regen_cache == false
+        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        with:
+          pattern: build-*-container
+          merge-multiple: true
+
+      - name: Load `gateway` and `ui` containers
+        if: inputs.regen_cache == false
+        run: |
+          docker load < gateway-container.tar
+          docker load < ui-container.tar
+
+      # This allows us to use 'no-build' on subsequent steps
+      - name: Build needed docker images
+        working-directory: ui
+        run: |
+          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures mock-inference-provider^
+
+      - name: Set common fixture environment variables
+        working-directory: ui
+        run: |
+          # Environment variables shared by the gateway and ui containers
+          echo "TENSORZERO_CLICKHOUSE_URL=http://chuser:chpassword@clickhouse:8123/tensorzero_ui_fixtures" >> fixtures/.env
+          echo "TENSORZERO_GATEWAY_URL=http://gateway:3000" >> fixtures/.env
+          echo "TENSORZERO_GATEWAY_TAG=sha-${{ github.sha }}" >> fixtures/.env
+          echo "TENSORZERO_UI_TAG=sha-${{ github.sha }}" >> fixtures/.env
+          # We need these set in the ui container, so that we construct the correct optimizer config
+          # to pass to 'experimentalLaunchOptimizationWorkflow'
+          echo "FIREWORKS_BASE_URL=http://mock-inference-provider:3030/fireworks/" >> fixtures/.env
+          echo "OPENAI_BASE_URL=http://mock-inference-provider:3030/openai/" >> fixtures/.env
+          echo "FIREWORKS_ACCOUNT_ID=fake_fireworks_account" >> fixtures/.env
+          echo "VITE_TENSORZERO_FORCE_CACHE_ON=1" >> fixtures/.env
+          echo "FIREWORKS_ACCOUNT_ID=${{ secrets.FIREWORKS_ACCOUNT_ID }}" >> fixtures/.env-gateway
+          echo "FIREWORKS_API_KEY=${{ secrets.FIREWORKS_API_KEY }}" >> fixtures/.env-gateway
+          echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> fixtures/.env-gateway
+          echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> fixtures/.env-gateway
+          echo "S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }}" >> fixtures/.env-gateway
+          echo "S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }}" >> fixtures/.env-gateway
+
+      - name: Run UI E2E tests that require credentials
+        id: e2e_tests_credentials
+        env:
+          TENSORZERO_CI: 1
+        run: pnpm ui:test:e2e --grep "@credentials"
 
   # Test that the ui e2e tests pass with model inference cache included in this commit
   # and no model provider secrets set.
