--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -206,12 +206,6 @@ jobs:
           docker load < gateway-container.tar
           docker load < ui-container.tar
 
-      # This allows us to use 'no-build' on subsequent steps
-      - name: Build needed docker images
-        working-directory: ui
-        run: |
-          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml build fixtures mock-inference-provider^
-
       - name: Set common fixture environment variables
         working-directory: ui
         run: |
@@ -232,6 +226,12 @@ jobs:
           echo "ANTHROPIC_API_KEY=${{ secrets.ANTHROPIC_API_KEY }}" >> fixtures/.env-gateway
           echo "S3_ACCESS_KEY_ID=${{ secrets.S3_ACCESS_KEY_ID }}" >> fixtures/.env-gateway
           echo "S3_SECRET_ACCESS_KEY=${{ secrets.S3_SECRET_ACCESS_KEY }}" >> fixtures/.env-gateway
+
+      - name: Start docker containers
+        run: |
+          export TENSORZERO_SKIP_LARGE_FIXTURES=1
+          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml up -d
+          docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml wait fixtures
 
       - name: Run UI E2E tests that require credentials
         id: e2e_tests_credentials
