--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -58,9 +58,10 @@ dev = [
     "pytest-rerunfailures",
     "pytest",
     "openai",
+    "clickhouse-connect",
+    "pandas",
 ]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
 include = [".cargo/*"]
-strip = true
