--- a/examples/guides/providers/nvidia_nim/config/tensorzero.toml
+++ b/examples/guides/providers/nvidia_nim/config/tensorzero.toml
@@ -3,9 +3,9 @@ routing = ["nvidia_nim"]
 
 [models.llama_3_1_8b_instruct.providers.nvidia_nim]
 type = "nvidia_nim"
-model_name = "meta/llama-3.1-8b-instruct"  # Note the "meta/" prefix
-api_base = "http://nvidia-nim:8000"
-api_key_location = "env::NVIDIA_API_KEY"   # Optional but explicit
+model_name = "meta/llama-3.1-8b-instruct"
+api_base = "https://integrate.api.nvidia.com/v1/"  # Cloud API
+api_key_location = "env::NVIDIA_API_KEY"
 
 [functions.my_function_name]
 type = "chat"
