--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -20,8 +20,7 @@ on:
 
 jobs:
   ui-tests-no-network:
-    # We're only using namespace here so that we can download the container artifacts
-    runs-on: namespace-profile-tensorzero-2x8
+    runs-on: ubuntu-latest
     steps:
       - name: Set DNS
         run: echo "127.0.0.1 howdy.tensorzero.com" | sudo tee -a /etc/hosts
@@ -32,7 +31,7 @@ jobs:
           node-version: "22.9.0"
 
       - name: Download container images
-        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
         with:
           pattern: build-*-container
           merge-multiple: true
@@ -73,8 +72,7 @@ jobs:
         run: docker inspect --format "{{json .State.Health }}" $(docker compose -f fixtures/docker-compose.e2e.yml -f fixtures/docker-compose.ui.yml ps -q ui) | jq
 
   ui-tests-gateway-prefix:
-    # We're only using namespace here so that we can download the container artifacts
-    runs-on: namespace-profile-tensorzero-2x8
+    runs-on: ubuntu-latest
     steps:
       - name: Set DNS
         run: echo "127.0.0.1 howdy.tensorzero.com" | sudo tee -a /etc/hosts
@@ -94,7 +92,7 @@ jobs:
         run: pnpm --filter=tensorzero-ui exec playwright install --with-deps chromium
 
       - name: Download container images
-        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
         with:
           pattern: build-*-container
           merge-multiple: true
