update fireworks pyproject

--- a/recipes/supervised_fine_tuning/fireworks/pyproject.toml
+++ b/recipes/supervised_fine_tuning/fireworks/pyproject.toml
@@ -6,9 +6,8 @@ requires-python = ">=3.9"
 dependencies = [
     "clickhouse-connect",
     "ipykernel",
-    "minijinja",
     "notebook",
-    "pandas",
+    "numpy",
     "tensorzero",
     "toml",
     "dotenv"
