--- a/recipes/supervised_fine_tuning/together/pyproject.toml
+++ b/recipes/supervised_fine_tuning/together/pyproject.toml
@@ -4,13 +4,11 @@ version = "0.0.0"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "clickhouse-connect",
     "ipykernel",
-    "minijinja",
     "notebook",
     "numpy",
     "requests",
-    "pandas",
+    "tensorzero",
     "toml",
     "together",
 ]
