--- a/examples/data-extraction-ner-sft-dpo/config/tensorzero.toml
+++ b/examples/data-extraction-ner-sft-dpo/config/tensorzero.toml
@@ -18,7 +18,7 @@ model = "openai::gpt-4o-mini-2024-07-18"
 system_template = "functions/extract_entities/initial_prompt/system_template.minijinja"
 json_mode = "strict"
 
-# TODO: Once you've fine-tuned your model, add it here like the commented example below
+# TODO: Once you've fine-tuned with SFT, add it here like the commented example below
 
 #[functions.extract_entities.variants.gpt_4o_mini_sft_fine_tuned]
 #type = "chat_completion"
