--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -129,6 +129,8 @@ enum-map = "2.7.3"
 tokio-util = "0.7.15"
 tempfile = "3.20.0"
 ts-rs = { workspace = true }
+utoipa = { version = "4.2.0", features = ["axum_extras", "yaml"] }
+utoipa-swagger-ui = { version = "7.0.0", features = ["axum"] }
 
 
 [dev-dependencies]
