--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   ui-tests:
-    runs-on: namespace-profile-tensorzero-8x16
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -30,18 +30,12 @@ jobs:
       - name: Install `pnpm` dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Setup the Namespace cache for `s3-fixtures`
-        uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
-        with:
-          path: |
-            ./ui/fixtures/s3-fixtures
-
       - name: Build `tensorzero-node`
         working-directory: internal/tensorzero-node
         run: pnpm build
 
       - name: Download `gateway` container
-        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
         with:
           name: build-gateway-container
           path: .
