--- a/.github/workflows/ui-tests-e2e.yml
+++ b/.github/workflows/ui-tests-e2e.yml
@@ -157,7 +157,7 @@ jobs:
 
       - name: Upload Playwright artifacts
         if: failure()
-        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: playwright-report-e2e-base-path
           path: |
@@ -166,7 +166,7 @@ jobs:
           retention-days: 7
 
   ui-tests-e2e-credentials:
-    runs-on: namespace-profile-tensorzero-8x16
+    runs-on: ubuntu-latest
     steps:
       # TODO - investigate why using the Namespace checkout action causes
       # 'tensorzero_core::built_info::GIT_COMMIT_HASH_SHORT' to be `None`
@@ -187,23 +187,13 @@ jobs:
       - name: Setup Playwright
         run: pnpm --filter=tensorzero-ui exec playwright install --with-deps chromium
 
-      - name: Cache `s3-fixtures`
-        uses: namespacelabs/nscloud-cache-action@2f50e7d0f70475e6f59a55ba0f05eec9108e77cc
-        with:
-          path: |
-            ./ui/fixtures/s3-fixtures
-
-      # When we're regenerating the model inference cache, don't download the container images
-      # The images will get built by `regenerate-model-inference-cache.sh`
       - name: Download container images
-        if: inputs.regen_cache == false
-        uses: namespace-actions/download-artifact@5c070f7d7ebdc47682b04aa736c76e46ff5f6e1e
+        uses: actions/download-artifact@95815c38cf2ff2164869cbab79da8d1f422bc89e
         with:
           pattern: build-*-container
           merge-multiple: true
 
       - name: Load `gateway` and `ui` containers
-        if: inputs.regen_cache == false
         run: |
           docker load < gateway-container.tar
           docker load < ui-container.tar
@@ -247,7 +237,7 @@ jobs:
 
       - name: Upload Playwright artifacts
         if: failure()
-        uses: namespace-actions/upload-artifact@9a78c62e083914789d908952f9773e42744b9f68
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: playwright-report-e2e-base-path
           path: |
