Allow starting gateway when an empty database exists
This allows us to start (and run migrations) if a user has manually
done 'CREATE DATABASE'

--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -66,6 +66,12 @@ jobs:
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
 
+      # Keep this in sync with the 'concurrency' section above
+      - name: Print concurrency group
+        run: |
+          echo "Concurrency group: ${{ github.event_name == 'merge_group' && format('{0}-{1}', github.workflow, github.ref) || github.run_id }}"
+
+      
       - name: Warm up modal instances
         run: |
           curl -H "Modal-Key: $MODAL_KEY" -H "Modal-Secret: $MODAL_SECRET" https://tensorzero--vllm-inference-vllm-inference.modal.run/docs > vllm_modal_logs.txt &
