--- a/.github/workflows/ui-tests-e2e-model-inference-cache.yml
+++ b/.github/workflows/ui-tests-e2e-model-inference-cache.yml
@@ -48,6 +48,9 @@ jobs:
       - name: Setup Playwright
         run: pnpm --filter=tensorzero-ui exec playwright install --with-deps chromium
 
+      - name: Cleanup disk space
+        run: ./ci/free-disk-space.sh
+
       # When we're regenerating the model inference cache, don't download the container images
       # The images will get built by `regenerate-model-inference-cache.sh`
       - name: Download container images
