--- a/tensorzero-core/Cargo.toml
+++ b/tensorzero-core/Cargo.toml
@@ -125,6 +125,7 @@ mime_guess = "2.0.5"
 indexmap = "2.10.0"
 base64 = "0.22.1"
 thiserror = "2.0.12"
+glob = "0.3.2"
 enum-map = "2.7.3"
 tokio-util = "0.7.15"
 tempfile = "3.20.0"
@@ -148,7 +149,6 @@ aws-credential-types = { version = "1.2.2", features = [
 http-body-util = "0.1.3"
 urlencoding = "2.1.3"
 image = "0.25.6"
-tempfile = "3.20.0"
 
 [build-dependencies]
 built = { version = "0.8.0", features = ["git2"] }
