updated recipes to remove manual config parsing + CH querying (#2735)
* updated DICL to remove manual config parsing + CH querying

* wip

* wip

* added PSEUDONYMOUS

* removed config parsing from DPO notebook

* removed config parsing libraries from MIPRO

* wip

* mipro updated to use Python config method except model field (not released yet)

* wip

* REST API migration, documentation + dependency updates

* File resource leak fix

* small fix

* updated google and fireworks notebooks

* updated openai SFT notebook

* updated google notebook documentation

* updated together sft notebook to use TensorZero

* moved SFT recipes up a directory

* remove demonstrations folder

* update unsloth and move utils

* update openai notebook

* update fireworks install

* fireworks update dependencies

* update fireworks pyproject

* update fireworks notebooks

* update together notebook

* update gcp vertex gemini notebook

* add setup instructions dicl

* update mipro notebook

---------

Co-authored-by: William Liu <wliu40@calpoly.edu>
Co-authored-by: Andrew Jesson <andrew@tensorzero.com>

--- a/recipes/supervised_fine_tuning/gcp-vertex-gemini/pyproject.toml
+++ b/recipes/supervised_fine_tuning/gcp-vertex-gemini/pyproject.toml
@@ -1,16 +1,15 @@
 [project]
-name = "tensorzero-recipes-dpo-openai"
+name = "tensorzero-recipes-supervised-fine-tuning-metrics-gcp-vertex-gemini"
 version = "0.0.0"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "clickhouse-connect",
+    "google-cloud-aiplatform",
     "ipykernel",
-    "tensorzero",
-    "minijinja",
     "notebook",
     "numpy",
-    "openai",
     "pandas",
+    "tensorzero",
     "toml",
 ]
