--- a/recipes/supervised_fine_tuning/together/pyproject.toml
+++ b/recipes/supervised_fine_tuning/together/pyproject.toml
@@ -1,16 +1,14 @@
 [project]
-name = "tensorzero-recipes-dpo-openai"
+name = "tensorzero-recipes-supervised-fine-tuning-metrics-together"
 version = "0.0.0"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "clickhouse-connect",
     "ipykernel",
-    "tensorzero",
-    "minijinja",
     "notebook",
     "numpy",
-    "openai",
-    "pandas",
+    "requests",
+    "tensorzero",
     "toml",
+    "together",
 ]
